# bebrafun

./: CLEAN_WSL.md  EXAMPLE_DuelGameView_usage.tsx  add-admin.js  add-admin.sql  check-onchain-pool-id.js  check-pool-47.js  check-pool-db.js  check-positions-table.js  check-trigger.js  check-volume.js  check_backend_response.js  check_latest_duel.js  check_market_id.js  check_winner_logic.js  clean-candles.js  clean_candles.sql  clean_duels.js  cleanup_duels.js  cleanup_markets.js  inspect-candles.js  lib_with_base_liquidity.rs  list-tables.js  migrate_chart_prices.js  package-lock.json  run-migration.js  run-onchain-pool-id-migration.js  run-positions-migration.js  run_migration.js  run_migration.py  show-schema.js  test-api.js  test_api.js  test_backend_api.js  test_backend_urls.js  test_latest_duel_api.js
.github/workflows/: build-smart-contract.yml  upload-metadata.yml
artifacts/idl/: pumpsly.json
contracts/: Anchor.toml  Cargo.toml
contracts/programs/prediction_market/: Cargo.toml
prediction-market/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_PLANNING.md  Dockerfile  ESCROW_CONTRACT.md  RAILWAY_SETUP.md  README.md  SETUP.md  TWITTER_LOCALHOST_FIX.md  TWITTER_OAUTH_FIX.md  check_duel.js  check_new_duel.js  go.mod  go.sum  railway.toml  run_migration.js  test-wallet-auth.html  test-wallet.json
prediction-market-frontend/: .env  .env.example  .gitignore  DEBUG.md  README.md  auth.patch  fix-auth.js  fix-auth.py  index.html  package-lock.json  package.json  tailwind.config.js  test_bs58.js  vite.config.ts
prediction-market-frontend/src/: App.tsx  index.css  vite-env.d.ts
prediction-market-frontend/src/api/: duels.ts
prediction-market-frontend/src/components/: AMMTradingPanel.tsx  AdminPoolControls.css  AdminPoolControls.tsx  AuthModal.tsx  CancelDuelButton.css  CancelDuelButton.tsx  Header.tsx  Portfolio.tsx  PriceChart.tsx  ProtectedRoute.tsx  SellOutcomeButton.css  SellOutcomeButton.tsx  SocialShareButton.tsx  TradingPanel.tsx  UnifiedTradingPanel.tsx  WalletConnect.tsx
prediction-market-frontend/src/contexts/: WalletProvider.tsx
prediction-market-frontend/src/hooks/: useBlockchainTrade.ts  useBlockchainWallet.ts  useDuel.ts  useDuelPolling.ts  usePolling.ts
prediction-market-frontend/src/idl/: pumpsly.json
prediction-market-frontend/src/pages/: AdminContests.tsx  AdminDashboard.tsx  AdminMarketsPage.tsx  AdminUsers.tsx  AuthCallbackPage.tsx  DuelsWalletPage.tsx  HomePage.tsx  LoginPage.tsx  MarketDetailPage.tsx  MarketsPage.tsx  ProfilePage.tsx  ProposeMarketPage.tsx  ReferralPage.tsx
prediction-market-frontend/src/services/: anchorProgramService.ts  api.ts  blockchainService.ts  duelBlockchainService.ts  duelService.ts
prediction-market-frontend/src/store/: duelStore.ts  userStore.ts
prediction-market-frontend/src/types/: duel.ts  types.ts
prediction-market-frontend/src/utils/: duelHelpers.ts  duelValidation.ts  solanaTransactions.ts
prediction-market/.github/workflows/: deploy-backend.yml
prediction-market/cmd/: main.go
prediction-market/cmd/migrate/: main.go
prediction-market/duels_escrow/: Anchor.toml  BUILD.md  Cargo.toml  DEPLOYMENT.md  README.md  package.json  security.txt  tsconfig.json
prediction-market/duels_escrow/programs/amm_program/: Cargo.toml
prediction-market/duels_escrow/programs/amm_program/src/: lib.rs
prediction-market/duels_escrow/programs/duels_escrow/: Cargo.toml
prediction-market/duels_escrow/programs/duels_escrow/src/: lib.rs
prediction-market/duels_escrow/programs/duels_program/: Cargo.toml
prediction-market/duels_escrow/programs/duels_program/src/: lib.rs
prediction-market/duels_escrow/programs/prediction_market/: Cargo.toml
prediction-market/duels_escrow/programs/prediction_market/src/: lib.rs
prediction-market/duels_escrow/programs/pumpsly/: Cargo.toml
prediction-market/duels_escrow/programs/pumpsly/src/: lib.rs
prediction-market/duels_escrow/tests/: amm.ts.skip  duels_escrow.ts.skip
prediction-market/idl/: pumpsly.json
prediction-market/internal/auth/: jwt.go  middleware.go
prediction-market/internal/blockchain/: anchor_client.go  anchor_duel_methods.go  diagnostics.go  escrow_contract.go  solana_client.go
prediction-market/internal/config/: config.go
prediction-market/internal/database/: database.go
prediction-market/internal/handlers/: admin_handler.go  amm_handler.go  auth.go  blockchain_handler.go  duel_handler.go  indexing_handler.go  (+5 more)
prediction-market/migrations/: 001_initial_schema.sql  004_trading_system.sql  005_add_wallet_address.sql  006_blockchain_tables.sql  007_add_x_avatar_url.sql  008_amm_tables.sql  009_duels_enhancement.sql  010_remove_twitter_oauth.sql  011_add_blockchain_addresses.sql  012_add_admin_user.sql  013_fix_amm_pools_unique_constraint.sql  014_add_onchain_pool_id.sql  014_user_positions.sql  015_add_chart_prices.sql  016_add_market_id_to_duels.sql  016_add_user_nickname.sql  017_add_starting_status.sql  017_add_user_role.sql  018_add_player2_direction.sql
prediction-market/scripts/: clean_duels.go  migrate.go
(+61 files in other folders)
