[workspace]
members = [
    "programs/prediction_market"
]
resolver = "2"

# Force compatible blake3 version (1.8.3 requires edition2024)
[patch.crates-io]
blake3 = "=1.8.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
