[package]
name = "amm_program"
version = "0.1.0"
description = "AMM smart contract for Prediction Market (constant product x*y=k)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
