[package]
name = "duels_escrow"
version = "0.1.0"
description = "Escrow smart contract for Prediction Market Duels"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duels_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
spl-token = "4.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
