[package]
name = "duels_program"
version = "0.1.0"
description = "Duel lifecycle smart contract for Prediction Market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duels_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
