[package]
name = "prediction-market"
version = "0.1.0"
description = "Unified prediction market smart contract for duels and AMM pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
spl-token = "6.0.0"
