[package]
name = "pumpsly"
version = "0.1.0"
description = "Unified prediction market smart contract for duels and AMM pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pumpsly"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
spl-token = "6.0.0"
